--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    hi
+    <nav>
+  <ul>
+    <li><a href="/home/">Home</a></li>
+    <li><a href="/about/">About</a></li>
+  </ul>
+</nav>
 </body>
 </html>
