--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <nav>
   <ul>
-    <li><a href="/home/">Home</a></li>
-    <li><a href="/about/">About</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about/about.html">About</a></li>
   </ul>
 </nav>
 </body>
