--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>I know what you did.</title>
 </head>
 <body>
     <nav>
   <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about/about.html">About</a></li>
+    <li><a href="index.html">Home plsss</a></li>
+    <li><a href="about.html">About</a></li>
   </ul>
 </nav>
 </body>
