--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
     <nav>
   <ul>
-    <li><a href="">Homesss</a></li>
-    <li><a href="">About</a></li>
+    <li><a href="/home/">Enter</a></li>
   </ul>
 </nav>
 </body>
