--- a/about/index.html
+++ b/about/index.html
@@ -40,7 +40,7 @@
                                     <br>
                                     - my favorite video games are Rain World, OneShot, Mindwave, DST, and You.
                                     <br>
-                                    - my favorite artists are <a href="https://x.com/pikatl?lang=en">pikat</a>, <a href="https://x.com/offsrambledegg">off script</a>, and <a href="https://www.instagram.com/kumoluko/?hl=en">kumoloko</a>.
+                                    - my favorite artists are <a href="https://x.com/pikatl?lang=en">pikat</a>, <a href="https://x.com/offsrambledegg">off script</a>, <a href="https://www.instagram.com/kumoluko/?hl=en">kumoloko</a> and more! check them out.
                                     <br>
                                     - i like talking to people a lot! just in moderation.
                                     <br>
