--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="topspacer"></div>
         <div class="skies">
             <br><br>
-            <h1 class="biggerh1">i've found you.</h1>
+            <h1 class="biggerh1">through the void, a cat</h1>
             <pre class="cat">⠀
     ⠀⠀⠀⠀⢀⡴⣆⠀⠀⠀⠀⠀⣠⡀ ᶻ 𝗓 𐰁 .ᐟ ⣼⣿⡗⠀⠀⠀⠀
     ⠀⠀⠀⣠⠟⠀⠘⠷⠶⠶⠶⠾⠉⢳⡄⠀⠀⠀⠀⠀⣧⣿⠀⠀⠀⠀⠀
@@ -29,7 +29,7 @@
     ⣠⠾⠋⠙⣶⣤⣤⣤⣤⣤⣀⣠⣤⣾⣿⠴⠶⠚⠋⠉⠁⠀⠀⠀⠀⠀⠀
     ⠛⠒⠛⠉⠉⠀⠀⠀⣴⠟⢃⡴⠛⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
              </pre>
-            <a href="about/">
+            <a href="foyer/">
                 <!-- <pre id="clouds"></pre> --> 
                  <h1>
                     <pre class="proceed">proceed</pre>
