--- a/files/index.html
+++ b/files/index.html
@@ -4,7 +4,7 @@
 
     <link rel="shortcut icon" href="../images/cat.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../logs/css/logs.css">
+    <link rel="stylesheet" href="../files/css/files.css">
     <script src="../js/jquery-3.6.0.min.js"></script>
     <script src="../js/home.js"></script>
 
