--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="css/frontpage.css">
     <script src="js/jquery-3.6.0.min.js"></script>
     <title>i have never known peace</title>
-
+    <div id="overlay"></div> 
     
 </head>
 
 <body>
-    <div id="overlay"></div> 
+    
     <!-- meow -->
     <center>
         <div class="topspacer"></div>
@@ -27,12 +27,12 @@
     ⠀⠀⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣧⠀⠀⠀⠀⠀⠀⠙⣷⡴⠶⣦
     ⠀⠀⢱⡀⠀⠉⠉⠀⠀⠀⠀⠉⠉⠀⢠⡟⠀⠀⠀⢀⣀⣠⣤⠿⠞⠛⠋
     ⣠⠾⠋⠙⣶⣤⣤⣤⣤⣤⣀⣠⣤⣾⣿⠴⠶⠚⠋⠉⠁⠀⠀⠀⠀⠀⠀
-    ⠛⠒⠛⠉⠉⠀⠀⠀⣴⠟⢃⡴⠛⠋⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    ⠛⠒⠛⠉⠉⠀⠀⠀⣴⠟⢃⡴⠛⠋⠀⠀⠀⠀⠀⠀⠀⠀
              </pre>
             <a href="foyer/">
-                <!-- <pre id="clouds"></pre> --> 
+
                  <h1>
-                    <pre class="proceed">proceed</pre>
+                    <pre class="proceed">continue</pre>
                  </h1>
             </a>  
             <h3>[ hero::chronicles ]</h3>
