--- a/foyer/index.html
+++ b/foyer/index.html
@@ -3,7 +3,7 @@
 
     <link rel="shortcut icon" href="../images/cat.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="/foyer/css/home.css">
 
     <script src="../js/jquery-3.6.0.min.js"></script>
     <script src="../js/home.js"></script>
