--- a/foyer/index.html
+++ b/foyer/index.html
@@ -69,7 +69,7 @@
                 <h2>changelog</h2>
                 <div class="logbox">
                     <ul>
-                        <li><strong>2025-03-27(28)</strong>: back button + small changes</li>
+                        <li><strong>2025-03-27(28)</strong>: back button (bottom right corner) + small changes</li>
                         <li><strong>2025-03-27</strong>: MIIINOR website rehaul</li>
                     </ul>
                 </div>
