--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 
     <link rel="shortcut icon" href="../images/cat.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../logs/css/logs.css">
+    <link rel="stylesheet" href="../files/css/files.css">
     <script src="../js/jquery-3.6.0.min.js"></script>
     <script src="../js/home.js"></script>
 
@@ -16,7 +16,7 @@
     <div class="mainwindow">
         <br>
         <center>
-            <h1>< 404 : work in progress ></h1>
+            <h1>< 404 : page not found ></h1>
             
             <img src="../images/wip.jpg" style="width: 100%;">
             <h2>sometimes, i waste my time on things that aren't important</h2>
