--- a/files/index.html
+++ b/files/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head></head>
     <meta charset="UTF-8">
-    <script data-goatcounter="https://freckleskies.goatcounter.com/count" async="" src="js/count.js"></script>
+    <!-- <script data-goatcounter="" async="" src=""></script> -->
 
     <link rel="shortcut icon" href="../images/cat.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
