unstable clickable niko

--- a/foyer/index.html
+++ b/foyer/index.html
@@ -17,30 +17,30 @@
     <div class="home">
         <div class="explorer-window">
             <div class="explorer-titlebar">
-                <a href="/" class="folder-up-button"><img src ="../images/folder_up.png" class="folder-up-icon"></a>
+                <a href="/" class="folder-up-button"><img src ="../images/folder_up.png" draggable="false" class="folder-up-icon"></a>
                 <span>/local_branches</span>
             </div>
             <div class="explorer-content">
                 <div class="folder-row">
                     <a href="/about" class="folder-icon">
                         <!-- this will be instead replaced with folder.png -->
-                        <img src="../images/doc.png" alt="Folder" class="folder-icon-img">
+                        <img src="../images/doc.png" draggable="false" alt="Folder" class="folder-icon-img">
                         <span>about</span>
                     </a>
                     <a href="/files" class="folder-icon">
 
-                        <img src="../images/folder.png" alt="Folder" class="folder-icon-img">
+                        <img src="../images/folder.png" draggable="false" alt="Folder" class="folder-icon-img">
                         <span>files</span>
                     </a>
                 </div>
                 <div class="folder-row">
                     <a href="/logs" class="folder-icon">
-                        <img src="../images/wallpapers_folder.png" alt="Folder" class="folder-icon-img">
+                        <img src="../images/wallpapers_folder.png" draggable="false" alt="Folder" class="folder-icon-img">
                         <span>logs</span>
                     </a>
                     <a href="http://users2.smartgb.com/g/g.php?a=s&i=g26-40205-c8" class="folder-icon">
                         
-                        <img src="../images/achievements.png" alt="Folder" class="folder-icon-img">
+                        <img src="../images/achievements.png" draggable="false" alt="Folder" class="folder-icon-img">
                         <span>guestbook</span>
                     </a>
                 </div> 
@@ -49,7 +49,7 @@
             
             <div class="fact-box">
                 <div class="fact-image">
-                    <img src="../images/Niko.png" alt="Random Fact">
+                    <img src="../images/Niko.png" draggable="false" alt="Random Fact">
                 </div>
                 <div class="fact-content">
                     <div class="fact-titlebar">Did You Know?</div>
