--- a/foyer/index.html
+++ b/foyer/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="/foyer/css/home.css">
 
-    <script src="../js/jquery-3.6.0.min.js"></script>
+    <script src="../js/jquery-3.6.0.min.js"></script>\
+    <script src="../js/facts.js"></script>
     <script src="../js/home.js"></script>
     <title>i know what you did.</title>
 </head>
@@ -54,7 +55,7 @@
                 <div class="fact-content">
                     <div class="fact-titlebar">Did You Know?</div>
                     <div class="fact-text">
-                        <p>Loading...</p>
+                        <p class="fact">Loading...</p>
                         <p class="fact-source">-i love you</p>
                     </div>
                 </div>
@@ -69,6 +70,7 @@
                 <h2>changelog</h2>
                 <div class="logbox">
                     <ul>
+                        <li><strong>2025-04-01</strong>: April fool. niko is now clickable</li>
                         <li><strong>2025-03-27(28)</strong>: back button (bottom right corner) + small changes</li>
                         <li><strong>2025-03-27</strong>: MIIINOR website rehaul</li>
                     </ul>
@@ -77,12 +79,4 @@
     </div>
     </div>
     <div class="fakebotbar"></div>
-    <script>
-        $(function() {
-            showRandomFact();
-            
-        
-            setInterval(showRandomFact, 7000);
-        });
-        </script>
 </body></html>
