--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 
     <link rel="shortcut icon" href="../images/cat.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../files/css/files.css">
+    <link rel="stylesheet" href="/css/404.css">
     <script src="../js/jquery-3.6.0.min.js"></script>
     <script src="../js/home.js"></script>
     <title>404</title>
@@ -17,8 +17,7 @@
             align-items: center;
             justify-content: center;
             height: calc(100vh - 120px);
-            padding: 20px;
-            box-sizing: border-box;
+            padding: 40px;      
         }
         
         .error-image {
@@ -38,8 +37,9 @@
 <body>
     <div id="overlay"></div>
     <nav></nav>
-    <div class="mainwindow" style="overflow: hidden;">
+    <div class="mainwindow">
         <div class="error-container">
+            <br>
             <h1>< 404 : page not found ></h1>
             <img src="../images/wip.jpg" class="error-image" alt="404 illustration">
             <div class="error-text">
