--- a/files/index.html
+++ b/files/index.html
@@ -49,13 +49,13 @@
                     <td colspan="4" class="directory-header">CREATIVE CORRAL</td>
                 </tr>
                 <tr>
-                    <td><a href="/codex">/codex</a></td>
+                    <td><a href="codex/">/codex</a></td>
                     <td>CODE DUMP</td>
                     <td>2025-04-01</td>
                     <td class="file-size">???</td>
                 </tr>
                 <tr>
-                    <td><a href="/scrawls">/scrawls</a></td>
+                    <td><a href="scrawls/">/scrawls</a></td>
                     <td>ARTWORKS</td>
                     <td>2025-04-01</td>
                     <td class="file-size">???</td>
@@ -66,7 +66,7 @@
                     <td colspan="4" class="directory-header">DIGITAL GARDEN</td>
                 </tr>
                 <tr>
-                    <td><a href="/photolog">/photolog</a></td>
+                    <td><a href="photolog/">/photolog</a></td>
                     <td>VISUAL DIARY</td>
                     <td>2025-04-01</td>
                     <td class="file-size">???</td>
@@ -83,13 +83,13 @@
                     <td colspan="4" class="directory-header">HYPERFIXATION VAULT</td>
                 </tr>
                 <tr>
-                    <td><a href="/fever_dreams">/fever_dreams</a></td>
+                    <td><a href="fever_dreams/">/fever_dreams</a></td>
                     <td>TEMPORARY</td>
                     <td>2025-04-01</td>
                     <td class="file-size">???</td>
                 </tr>
                 <tr>
-                    <td><a href="/constellations">/constellations</a></td>
+                    <td><a href="constellations/">/constellations</a></td>
                     <td>LONG-LASTING</td>
                     <td>2025-04-01</td>
                     <td class="file-size">???</td>
