--- a/foyer/index.html
+++ b/foyer/index.html
@@ -70,6 +70,7 @@
                 <h2>changelog</h2>
                 <div class="logbox">
                     <ul>
+                        <li><strong>2025-04-02</strong>: added the <a href="/files/codex">codex</a> directory (probably will get more changes)</li>
                         <li><strong>2025-04-01</strong>: April fool. niko is now clickable. added files (still not done)</li>
                         <li><strong>2025-03-27(28)</strong>: back button (bottom right corner) + small changes</li>
                         <li><strong>2025-03-27</strong>: MIIINOR website rehaul</li>
