--- a/files/constellations/index.html
+++ b/files/constellations/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/cat.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    
+    <link rel="stylesheet" href="../files/css/files.css">
     <script src="../js/jquery-3.6.0.min.js"></script>
     <script src="../js/home.js"></script>
     <title>wip :3</title>
