--- a/files/codex/index.html
+++ b/files/codex/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../images/cat.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../css/files.css">
-    <script src="../../js/jquery-3.6.0.min.js"></script>
-    <script src="../../js/home.js"></script>
+    <link rel="shortcut icon" href="/images/cat.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/files/css/files.css">
+    <script src="/js/jquery-3.6.0.min.js"></script>
+    <script src="/js/home.js"></script>
     <title>WHAT THE FUCK IS A BOOLEAN</title>
     <style>
         body {
@@ -215,7 +215,7 @@
 
     <script>
     $(document).ready(function() {
-        // Tab switching functionality
+
         $('.codex-category').on('click', function() {
             const target = $(this).data('target');
             $('.codex-content').removeClass('active');
@@ -224,7 +224,7 @@
             $(this).addClass('active');
         });
 
-        // Animate entry appearances
+
         $('.codex-entry').each(function(index) {
             $(this).delay(100 * index).fadeTo(300, 1);
         });
