--- a/foyer/index.html
+++ b/foyer/index.html
@@ -50,13 +50,13 @@
             
             <div class="fact-box">
                 <div class="fact-image">
-                    <img src="../images/Niko.png" draggable="false" alt="Random Fact">
+                    <img src="../images/Niko_speak.png" draggable="false" alt="Random Fact">
                 </div>
                 <div class="fact-content">
-                    <div class="fact-titlebar">Did You Know?</div>
+                    <div class="fact-titlebar">Hey!</div>
                     <div class="fact-text">
-                        <p class="fact">Loading...</p>
-                        <p class="fact-source">-i love you</p>
+                        <p class="fact">Welcome to my website!</p>
+                        <p class="fact-source">- :3</p>
                     </div>
                 </div>
             </div>
@@ -70,6 +70,7 @@
                 <h2>changelog</h2>
                 <div class="logbox">
                     <ul>
+                        <li><strong>2025-04-03</strong>: silly flicker animation, minor changes to <a href="/files/codex">codex</a></li>
                         <li><strong>2025-04-02</strong>: added the <a href="/files/codex">codex</a> directory (probably will get more changes)</li>
                         <li><strong>2025-04-01</strong>: April fool. niko is now clickable. added files (still not done)</li>
                         <li><strong>2025-03-27(28)</strong>: back button (bottom right corner) + small changes</li>
