--- a/about/index.html
+++ b/about/index.html
@@ -21,6 +21,7 @@
                 <div class="retro-terminal">
                     <div class="terminal-bar">
                         <!-- <a href="/" class="folder-up-button"><img src ="../images/folder_up.png" class="folder-up-icon"></a> -->
+                        <a class="windowbuttons"><img src="/images/underscore.png"><img src="/images/X.png"></a>
                         <span>bio.txt</span>
                     </div>
                     <div class="terminal-content">
@@ -53,6 +54,7 @@
             <div class="about-contact">
                 <div class="retro-terminal">
                     <div class="terminal-bar">
+                        <a class="windowbuttons"><img src="/images/underscore.png"><img src="/images/X.png"></a>
                         <span>contacts.md</span>
                     </div>
                     <div class="terminal-content">
@@ -72,7 +74,11 @@
                 </div>
 
                 <div class="signature">
-                    <div class="terminal-bar">cat.txt</div>
+                    <div class="terminal-bar">
+                        <a class="windowbuttons"><img src="/images/underscore.png"><img src="/images/X.png"></a>
+                        <span>cat.txt</span>
+
+                    </div>
                         <pre class="ascii-art">
         ⢠⣿⣿⣦⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⣿⣦⡀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⢠⣿⣿⣿⣿⣆⠀⠀⠀⠀⠀⠀⠀⠀⣾⣿⣿⣿⣷⠀⠀⠀⠀⠀⠀⠀
