--- a/foyer/index.html
+++ b/foyer/index.html
@@ -19,6 +19,7 @@
         <div class="explorer-window">
             <div class="explorer-titlebar">
                 <a href="/" class="folder-up-button"><img src ="../images/folder_up.png" draggable="false" class="folder-up-icon"></a>
+                <a class="windowbuttons"><img src="/images/underscore.png"><img src="/images/X.png"></a>
                 <span>/local_branches</span>
             </div>
             <div class="explorer-content">
@@ -60,8 +61,6 @@
                     </div>
                 </div>
             </div>
-            
-
         </div>
         
             <!-- this is where the side menu changelog should be  -->
