--- a/foyer/index.html
+++ b/foyer/index.html
@@ -56,7 +56,7 @@
                 <div class="fact-content">
                     <div class="fact-titlebar">Hey!</div>
                     <div class="fact-text">
-                        <p class="fact">Welcome to my website!</p>
+                        <p class="fact">How are ya?</p>
                         <p class="fact-source">- :3</p>
                     </div>
                 </div>
@@ -69,6 +69,7 @@
                 <h2>changelog</h2>
                 <div class="logbox">
                     <ul>
+                        <li><strong>2025-04-12</strong>: first debug version of <a href="/files/fever_dreams">fever dreams</a> (verrrryyyy work in progress). added some transitions between pages</li>
                         <li><strong>2025-04-03</strong>: silly flicker animation, minor changes to <a href="/files/codex">codex</a></li>
                         <li><strong>2025-04-02</strong>: added the <a href="/files/codex">codex</a> directory (probably will get more changes)</li>
                         <li><strong>2025-04-01</strong>: April fool. niko is now clickable. added files (still not done)</li>
