--- a/files/constellations/index.html
+++ b/files/constellations/index.html
@@ -1,16 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTYPE html><html lang="en"><head></head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script data-goatcounter="" async="" src=""></script> -->
+
     <link rel="shortcut icon" href="/images/cat.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/files/css/files.css">
     <script src="/js/jquery-3.6.0.min.js"></script>
     <script src="/js/home.js"></script>
-    <title></title>
+    <script src="/js/files.js"></script>
+
+    <title>wip :3</title>
 </head>
 <body>
+    <div id="overlay"></div>
+    <nav></nav>
+    <div class="navbar"></div>
 
-</body>
-</html>
+    
+
+    <div class="botbar"></div>
+    
+</body></html>
