--- a/files/fever_dreams/index.html
+++ b/files/fever_dreams/index.html
@@ -109,7 +109,7 @@
         }
 
         .taglist h1 {
-            font-size: 3em;
+            font-size: 4em;
         }
 
         .taglist p {
@@ -174,22 +174,7 @@
             margin-top: 20px;
         }
 
-        .vibe-item {
-            padding: 12px;
-            border-left: 3px solid var(--purple);
-            background: rgba(255, 255, 255, 0.05);
-            position: relative;
-            overflow: hidden;
-        }
 
-        .vibe-item::before {
-            content: "✦";
-            position: absolute;
-            right: 5px;
-            bottom: 5px;
-            color: var(--purple);
-            opacity: 0.3;
-        }
 
 
         .taglist h1 {
@@ -221,15 +206,6 @@
             color: var(--purple);
         }
 
-        @media (max-width: 768px) {
-            .vibe-grid {
-                grid-template-columns: 1fr;
-            }
-            
-            .game-grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
         .liststyle {
             list-style-type: '> ';
             padding-left: 0;
@@ -260,7 +236,7 @@
     <div class="navbar"></div>
     <div class="main">
         <div class="taglist">
-            <h1 class="secret"><br>-`✮´- fever dreams -`✮´-</h1>
+            <h1 class="secret">-`✮´- fever dreams -`✮´-</h1>
             <p>things that keep me warm and alive</p>
             <h2>characters i like</h2>
         </div>
