--- a/404.html
+++ b/404.html
@@ -11,6 +11,10 @@
     <script src="../js/home.js"></script>
     <title>404</title>
     <style>
+        body{
+            background-color: var(--main-dark);
+        }
+
         .error-container {
             display: flex;
             flex-direction: column;
