--- a/files/fever_dreams/index.html
+++ b/files/fever_dreams/index.html
@@ -406,6 +406,16 @@
 
                     <div class="character-card">
                         <div class="image-crop">
+                            <img src="/images/fever_dreams/Ryo.gif" alt="Ryo">
+                        </div>
+                        <div class="character-info">
+                            <div class="character-name">Ryō Yamada</div>
+                            <div class="game-title">Bocchi the Rock!</div>
+                        </div>
+                    </div>
+
+                    <div class="character-card">
+                        <div class="image-crop">
                             <img src="/images/fever_dreams/Osaka.png" alt="Osaka">
                         </div>
                         <div class="character-info">
