--- a/files/fever_dreams/index.html
+++ b/files/fever_dreams/index.html
@@ -409,7 +409,7 @@
                             <img src="/images/fever_dreams/Ryo.gif" alt="Ryo">
                         </div>
                         <div class="character-info">
-                            <div class="character-name">Ryō Yamada</div>
+                            <div class="character-name">Ryō Yamada (*)</div>
                             <div class="game-title">Bocchi the Rock!</div>
                         </div>
                     </div>
