THESE FUCKING WEIRD ASS TRANSITIONS

--- a/about/index.html
+++ b/about/index.html
@@ -26,19 +26,19 @@
                     </div>
                     <div class="terminal-content">
 
-                        <center><h3>im <span class="purple">konero</span>, aka <span class="purple">hero</span>(<span class="purple">634</span>) or <span class="purple">kerunko</span></h3></center>
+                        <center><h3>im <span class="purple">konero</span>, aka <span class="purple">hero</span>(<span class="purple">634</span>)</h3></center>
                         <p>
                             > hi!!! here's where you can learn a little bit about who i am!
 
                         </p>
                         <p>
-                            > this website is STILL in wip, so expect many things to change!
+                            > this website is STILL in wip, so expect many things to change.
                             <br><br>
-                            > i am someone whos trying to study programming and learn to draw at the same time!... though not very proactively, since im pretty busy with school and other things.
+                            > i am someone whos trying to study programming, learn japanese and try to draw at the same time!... though not very proactively, since im pretty busy with life and other things.
                             <br><br>
-                            > my interests are art (obviously), programming, music, video games and most importantly... cats and rats.
+                            > my interests are art, programming, music, video games and most importantly... cats and rats.
                             <br><br>
-                            > my favorite video games are Rain World, OneShot, Mindwave, DST, and You.
+                            > my favorite video games include Rain World, OneShot, Mindwave, DST, and more.
                             <br><br>
                             > my favorite artists are <a href="https://x.com/pikatl?lang=en">pikat</a>, <a href="https://x.com/offsrambledegg">off script</a>, <a href="https://www.instagram.com/kumoluko/?hl=en">kumoloko</a> and more! check them out.
                             <br><br>
