--- a/files/constellations/index.html
+++ b/files/constellations/index.html
@@ -9,7 +9,7 @@
     <script src="/js/home.js"></script>
     <script src="/js/files.js"></script>
 
-    <title>wip :3</title>
+    <title>still wip..</title>
 </head>
 <body>
     <div id="overlay"></div>
