--- a/foyer/index.html
+++ b/foyer/index.html
@@ -68,7 +68,7 @@
                 <h2>changelog</h2>
                 <div class="logbox">
                     <ul>
-                        <li><strong>2025-07-24</strong>: minor changes (like the jankiness between transitions). maybe ill get to working on constellations/fever dreams soon</li>
+                        <li><strong>2025-07-24</strong>: minor fixes. maybe ill get to working on constellations/fever dreams soon</li>
                         <li><strong>2025-04-12</strong>: first debug version of <a href="/files/fever_dreams">fever dreams</a> (verrrryyyy work in progress). added some transitions between pages</li>
                         <li><strong>2025-04-03</strong>: silly flicker animation, minor changes to <a href="/files/codex">codex</a></li>
                         <li><strong>2025-04-02</strong>: added the <a href="/files/codex">codex</a> directory (probably will get more changes)</li>
