balkan rage part 2

--- a/files/fever_dreams/index.html
+++ b/files/fever_dreams/index.html
@@ -455,11 +455,11 @@
 
                     <div class="character-card">
                         <div class="image-crop">
-                            <img src="/images/fever_dreams/Angeldevil.png" alt="Angel Devil">
+                            <img src="/images/fever_dreams/Nijika.png" alt="Angel Devil">
                         </div>  
                         <div class="character-info">
-                            <div class="character-name">Angel Devil</div>
-                            <div class="game-title">Chainsaw Man</div>
+                            <div class="character-name">Nijika Ijichi</div>
+                            <div class="game-title">Bocchi the Rock!</div>
                         </div>
                     </div>
 
