The flavor of uncommitment

--- a/files/index.html
+++ b/files/index.html
@@ -204,7 +204,7 @@
         'codex': ['codex.jpg', 'bd.png', 'laziness.png', 'rats.png', 'tg.png', 'vro.png'],
         'scrawls': ['starry.gif'],
         'photolog': [],
-        'fever_dreams': ['Aira.jpg', 'Osagechan.jpg', 'Ling.png', 'Ryo.png', 'Nijika.png', 'Hitori_Gotou.png', 'arrow_down.png', 'bg.gif', 'Pandora.jpg', 'Hero.png', 'Neuro-sama.png', 'Niko.png', 'Osaka.png', 'Rita.jpg', 'Yotsuba.png'],
+        'fever_dreams': ['Aira.jpg', 'Osagechan.jpg', 'Ling.png', 'Ryo.png', 'Nijika.png', 'Hitori_Gotou.png', 'arrow_down.png', 'bg.gif', 'Pandora.jpg', 'Hero.png', 'Neuro-sama.png', 'Niko.png', 'Osaka.png', 'Rita.jpg', 'Yotsuba.png', 'YuuriChito.jpg', 'Sachie.jpg'],
         'constellations': []
     };
 
