The flavor of noncommitment (CANNOT SPELL FOR THE LIFE OF ME)

--- a/foyer/index.html
+++ b/foyer/index.html
@@ -68,14 +68,15 @@
                 <h2>changelog</h2>
                 <div class="logbox">
                     <ul>
-                        <li><strong>2025-09-28(29)</strong>: slight changes to the first page of <a href="/files/fever_dreams">fever dreams</a></li>
-                        <li><strong>2025-07-24</strong>: minor fixes. maybe ill get to working on constellations/fever dreams soon</li>
-                        <li><strong>2025-04-12</strong>: first debug version of <a href="/files/fever_dreams">fever dreams</a> (verrrryyyy work in progress). added some transitions between pages</li>
-                        <li><strong>2025-04-03</strong>: silly flicker animation, minor changes to <a href="/files/codex">codex</a></li>
-                        <li><strong>2025-04-02</strong>: added the <a href="/files/codex">codex</a> directory (probably will get more changes)</li>
-                        <li><strong>2025-04-01</strong>: April fool. niko is now clickable. added files (still not done)</li>
-                        <li><strong>2025-03-27(28)</strong>: back button (bottom right corner) + small changes</li>
-                        <li><strong>2025-03-27</strong>: MIIINOR website rehaul</li>
+                        <!-- <li><strong>date / (name)</strong>: </li> -->
+                        <li><strong>2025-09-28(29) / the flavor of noncommitment</strong>: slight changes to the first page of <a href="/files/fever_dreams">fever dreams</a></li>
+                        <li><strong>2025-07-24 / (unnamed)</strong>: minor fixes. maybe ill get to working on constellations/fever dreams soon</li>
+                        <li><strong>2025-04-12 / (unnamed)</strong>: first debug version of <a href="/files/fever_dreams">fever dreams</a> (verrrryyyy work in progress). added some transitions between pages</li>
+                        <li><strong>2025-04-03 / (unnamed)</strong>: silly flicker animation, minor changes to <a href="/files/codex">codex</a></li>
+                        <li><strong>2025-04-02 / (unnamed)</strong>: added the <a href="/files/codex">codex</a> directory (probably will get more changes)</li>
+                        <li><strong>2025-04-01 / (unnamed)</strong>: April fool. niko is now clickable. added files (still not done)</li>
+                        <li><strong>2025-03-27(28) / (unnamed)</strong>: back button (bottom right corner) + small changes</li>
+                        <li><strong>2025-03-27 / (unnamed)</strong>: MIIINOR website rehaul</li>
                     </ul>
                 </div>
             </div>
