this website is so buns </3

--- a/files/index.html
+++ b/files/index.html
@@ -42,18 +42,19 @@
                     <td>--</td>
                 </tr>
                 
-                <!-- Creative Projects -->
+                <!-- Creative Corral -->
+
                 <tr>
                     <td colspan="4" class="directory-header">CREATIVE CORRAL</td>
                 </tr>
                 <tr>
-                    <td><a href="codex/" class="folder-click">/codex</a></td>
+                    <td><a class="folder-click disabled">/codex</a></td>
                     <td>CODE DUMP</td>
                     <td>2025-04-03</td>
                     <td class="file-size">???</td>
                 </tr>
                 <tr>
-                    <td><a href="scrawls/" class="folder-click">/scrawls</a></td>
+                    <td><a class="folder-click disabled">/scrawls</a></td>
                     <td>ARTWORKS</td>
                     <td>2025-04-03</td>
                     <td class="file-size">???</td>
@@ -64,7 +65,7 @@
                     <td colspan="4" class="directory-header">DIGITAL GARDEN</td>
                 </tr>
                 <tr>
-                    <td><a href="photolog/" class="folder-click">/photolog</a></td>
+                    <td><a class="folder-click disabled">/photolog</a></td>
                     <td>VISUAL DIARY</td>
                     <td>2025-04-01</td>
                     <td class="file-size">???</td>
@@ -87,7 +88,7 @@
                     <td class="file-size">???</td>
                 </tr>
                 <tr>
-                    <td><a href="constellations/" class="folder-click">/constellations</a></td>
+                    <td><a class="folder-click disabled">/constellations</a></td>
                     <td>OBSESSIONS</td>
                     <td>2025-04-01</td>
                     <td class="file-size">???</td>
