--- a/foyer/index.html
+++ b/foyer/index.html
@@ -35,8 +35,8 @@
                     </a>
                 </div>
                 <div class="folder-row">
-                    <a href="/logs" class="folder-icon">
-                        <img src="../images/wallpapers_folder.png" draggable="false" alt="Folder" class="folder-icon-img">
+                    <a class="folder-icon disabled">
+                        <img src="../images/wallpapers_folder.png" draggable="false" alt="Folder" class="folder-icon-img disabled">
                         <span>logs</span>
                     </a>
                     <a href="http://users2.smartgb.com/g/g.php?a=s&i=g26-40205-c8" class="folder-icon">
