--- a/404.html
+++ b/404.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <script data-goatcounter="" async="" src=""></script> -->
 
     <link rel="shortcut icon" href="../images/cat.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
@@ -13,6 +12,7 @@
     <style>
         body{
             background-color: var(--main-dark);
+            background-image: none;
         }
 
         .error-container {
@@ -35,6 +35,10 @@
             max-width: 600px;
             text-align: center;
             margin: 0 auto;
+        }
+        .mainwindow{
+            border-color: var(--main-light);
+            scrollbar-color: var(--main-dark);
         }
     </style>
 </head>
