--- a/files/index.html
+++ b/files/index.html
@@ -65,9 +65,9 @@
                     <td colspan="4" class="directory-header">DIGITAL GARDEN</td>
                 </tr>
                 <tr>
-                    <td><a class="folder-click disabled">/photolog</a></td>
-                    <td>VISUAL DIARY</td>
-                    <td>2025-04-01</td>
+                    <td><a class="folder-click disabled">???</a></td>
+                    <td>???</td>
+                    <td>???</td>
                     <td class="file-size">???</td>
                 </tr>
                 <!-- <tr>
@@ -84,7 +84,7 @@
                 <tr>
                     <td><a href="fever_dreams/" class="folder-click">/fever_dreams</a></td>
                     <td>INTERESTS</td>
-                    <td>2025-04-01</td>
+                    <td>2025-11-29</td>
                     <td class="file-size">???</td>
                 </tr>
                 <tr>
